# rust_server

./: .gitignore  Cargo.toml  build.py  docker-compose.yml
doc/: insomnia
src/: api_endpoints.rs  api_web.rs  config.rs  db.rs  db_messages.rs  inline.rs  lib.rs  main.rs
static/: index.html
web/: home.html
