[package]
name = "rust_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
inline = []

[dependencies]
actix-web = "4"
tokio-postgres = "0.7.10"
lazy_static = {version = "1.4.0"}
postgres = "0.19.7"
serde = {version = "1.0.197", features = ["derive"]}
serde_json = "1.0.114"
time = { version = "0.3", features = ["macros"] }
once_cell = "1.19.0"
